--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <img src="baseold.png">
  </a>
 </p>
-        <a href="./base">
+        <a href="http://uploads.ungrounded.net/alternate/1528000/1528775_alternate_113347_r86.zip/">
   <img src="base.png">
  </a>
 </p>
