--- a/index.html
+++ b/index.html
@@ -1,25 +1,50 @@
-<!DOCTYPE HTML> 
 <html>
     <head>
        <title>
             Friday Night Funkin' Menu
         </title>
+        <link rel="shortcut icon" type="image/jpg" href="favicon.ico"/>
+    <link rel="stylesheet" href="fonts/stylesheet.css" type="text/css" charset="utf-8" />
+
+	<style type="text/css">
+					body{
+				font-family: 'Friday Night Funkin Font';
+							}
+		</style>
+        </style>
+<style>
+body, html {
+  margin: 0;
+  height: 100%;
+}
+
+.bg {
+  background-image: url("img/page.png");
+  height: 100%; 
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+</style>       
     </head>
     <body>
-        <p>Choose a version of FNF.</p><br>
+        <audio controls autoplay hidden loop>
+          <source src="data/freakyMenu.ogg" type="audio/ogg">
+          <source src="data/freakyMenu.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+        </audio>
+        <div style="background-image: url('img/page.png');">
+        <p class="s58" style="font-size: 58px;">Choose a version of Friday Night Funkin' to play.<br><br>This'll be updated n shit hopefully lmao<br>so yea</p>
+        <a href=".http://uploads.ungrounded.net/alternate/1528000/1528775_alternate_113347_r87.zip/">
+   <img src="img/base.png">
+ </a>
+        <a href="./kade">
+   <img src="img/kade.png">
+ </a>
         <a href="./proto">
-  <img src="proto.png">
+  <img src="img/proto.png">
  </a>
-</p>
         <a href="./baseold">
-  <img src="baseold.png">
+  <img src="img/baseold.png">
  </a>
-</p>
-        <a href="http://uploads.ungrounded.net/alternate/1528000/1528775_alternate_113347_r86.zip/">
-  <img src="base.png">
- </a>
-</p>
-        <a href="./nightly">
-  <img src="kade.png">
- </a>
-</p>
+        <p class="s58" style="font-size: 58px;">You've reached the end.<br>Expect more soon ig</p>
