--- a/index.html
+++ b/index.html
@@ -38,13 +38,10 @@ body, html {
         <a href=".http://uploads.ungrounded.net/alternate/1528000/1528775_alternate_113347_r87.zip/">
    <img src="img/base.png">
  </a>
-        <a href="./kade">
+        <a href="./nightly">
    <img src="img/kade.png">
  </a>
         <a href="./proto">
   <img src="img/proto.png">
- </a>
-        <a href="./baseold">
-  <img src="img/baseold.png">
  </a>
         <p class="s58" style="font-size: 58px;">You've reached the end.<br>Expect more soon ig</p>
