--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
        <title>
             Friday Night Funkin' Menu
         </title>
-        <link rel="shortcut icon" type="image/jpg" href="favicon.ico"/>
+        <link rel="shortcut icon" type="image/jpg" href="favicon.png"/>
     <link rel="stylesheet" href="fonts/stylesheet.css" type="text/css" charset="utf-8" />
 
 	<style type="text/css">
