--- a/index.html
+++ b/index.html
@@ -44,4 +44,4 @@ body, html {
         <a href="./proto">
   <img src="img/proto.png">
  </a>
-        <p class="s58" style="font-size: 58px;">You've reached the end.<br>Expect more soon ig</p>
+        <p class="s58" style="font-size: 58px;">lol</p>
