--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body, html {
         </audio>
         <div style="background-image: url('img/page.png');">
         <p class="s58" style="font-size: 58px;">Choose a version of Friday Night Funkin' to play.<br><br>This'll be updated n shit hopefully lmao<br>so yea</p>
-        <a href=".http://uploads.ungrounded.net/alternate/1528000/1528775_alternate_113347_r87.zip/">
+        <a href="http://uploads.ungrounded.net/alternate/1528000/1528775_alternate_113347_r87.zip/">
    <img src="img/base.png">
  </a>
         <a href="./nightly">
