--- a/index.html
+++ b/index.html
@@ -44,4 +44,7 @@ body, html {
         <a href="./proto">
   <img src="img/proto.png">
  </a>
+        <a href="./baseold">
+  <img src="img/baseold.png">
+ </a>
         <p class="s58" style="font-size: 58px;">lol</p>
